# virtual-closet-mobile

./: .eslintrc.js  App.tsx  README.md  SERVICES_AND_DATA_STRUCTURES.md  app.json  package-lock.json  package.json  tsconfig.json
backend/: .gitignore  DENSEPOSE_SETUP.md  README.md  pyproject.toml
backend/app/: main.py
backend/app/ai/: CLEANUP_SUMMARY.md  __init__.py  background_removal.py  idm_vton_official.py  idm_vton_simplified.py  model_manager.py
backend/app/ai/configs/: README.md
backend/app/ai/idm_vton_custom/: __init__.py  tryon_pipeline.py  unet_block_hacked_garmnet.py  unet_block_hacked_tryon.py  unet_hacked_garmnet.py  unet_hacked_tryon.py
backend/app/ai/ip_adapter/: attention_processor.py
backend/app/ai/models/: __init__.py  u2net.py
backend/app/ai/preprocess/: README.md  densepose_wrapper.py  download_densepose.py  enhanced_pose.py
backend/app/ai/virtual_tryon/: __init__.py  idm_vton_fixed.py  (+4 more)
backend/app/config/: __init__.py  constants.py  model_paths.py  settings.py
backend/app/models/: __init__.py  clothing.py  outfit.py  recommendation.py  user.py
backend/app/routers/: __init__.py  auth.py  clothing.py  outfits.py  recommendations.py  users.py
backend/app/schemas/: __init__.py  auth_schemas.py  clothing_schemas.py  outfit_schemas.py  recommendation_schemas.py  user_schemas.py
backend/app/services/: __init__.py  ai_service.py  auth_service.py  clothing_service.py  image_service.py  outfit_service.py  user_service.py
backend/app/static/: swagger-init.js
backend/app/utils/: security.py
backend/scripts/: cleanup_old_uploads.py
(+63 files in other folders)
